[gd_scene load_steps=11 format=3 uid="uid://obcwbbi5frgf"]

[ext_resource type="Script" uid="uid://ctng51i2htm3i" path="res://game.gd" id="1_7jktm"]
[ext_resource type="PackedScene" uid="uid://drxb1ada2nukq" path="res://Player.tscn" id="1_80nbo"]
[ext_resource type="Material" uid="uid://c3ajgacyijc3f" path="res://level/green.tres" id="1_e2o6t"]
[ext_resource type="Material" uid="uid://b5mlfgngrs1et" path="res://level/blue.tres" id="2_feb5d"]
[ext_resource type="PackedScene" uid="uid://dwuk3n7oi2hun" path="res://mob/spawner/mob_spawner_3d.tscn" id="5_7jktm"]
[ext_resource type="AudioStream" uid="uid://bef8fj4a5a34h" path="res://september_sky.mp3" id="6_ryrav"]
[ext_resource type="AudioStream" uid="uid://d31p3lwlbq35d" path="res://game_over.mp3" id="7_eow3j"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_7jktm"]

[sub_resource type="Environment" id="Environment_80nbo"]
background_mode = 1
background_color = Color(0.0440265, 0.207106, 0.43654, 1)
background_energy_multiplier = 1.01
ambient_light_color = Color(0.361575, 0.361575, 0.361575, 1)
ambient_light_energy = 2.08
tonemap_mode = 2
glow_enabled = true
glow_intensity = 1.47
glow_bloom = 0.35
glow_hdr_threshold = 3.59
glow_hdr_scale = 0.99
fog_enabled = true
fog_light_color = Color(0.184566, 0.421456, 0.574665, 1)
fog_light_energy = 0.21
fog_density = 0.0171
fog_sky_affect = 0.514
fog_height = 0.2
fog_height_density = 1.0514

[sub_resource type="LabelSettings" id="LabelSettings_7jktm"]
font_size = 31
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0.0111937, 0.0099403, 0.00813717, 0)

[node name="Game" type="Node3D"]
script = ExtResource("1_7jktm")

[node name="KillPlane" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -18.7472, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillPlane"]
shape = SubResource("WorldBoundaryShape3D_7jktm")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.520396, -0.480273, -0.5)
use_collision = true
size = Vector3(10, 1, 10)
material = ExtResource("1_e2o6t")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4796, 0.319726, -0.5)
material_override = ExtResource("2_feb5d")
use_collision = true
size = Vector3(10, 1, 10)
material = ExtResource("1_e2o6t")

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.4796, 0.314725, -1.5)
use_collision = true
size = Vector3(10, 1, 10)
material = ExtResource("1_e2o6t")

[node name="CSGBox3D10" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7796, 0.619727, -22)
use_collision = true
size = Vector3(10, 1, 12)
material = ExtResource("2_feb5d")

[node name="CSGBox3D12" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.7796, 0.309345, -9)
use_collision = true
size = Vector3(10, 1, 12)
material = ExtResource("2_feb5d")

[node name="CSGBox3D11" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.220394, 0.419726, -24.5)
use_collision = true
size = Vector3(10, 1, 3)
material = ExtResource("1_e2o6t")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.0204, -0.480273, -10.5)
material_override = ExtResource("2_feb5d")
use_collision = true
size = Vector3(29, 1, 34)
material = ExtResource("1_e2o6t")

[node name="Player" parent="." instance=ExtResource("1_80nbo")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.997053, -0.076719, 0, 0.076719, 0.997053, -1, 1, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 7, 25, 6)
light_color = Color(0.505344, 0.505344, 0.505344, 1)
light_energy = 7.123
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_80nbo")

[node name="MobSpawner3D" parent="." instance=ExtResource("5_7jktm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.2332, 1.32133, -12.524)

[node name="MobSpawner3D2" parent="." instance=ExtResource("5_7jktm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.3566, 1.32133, -12.524)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 83.0
offset_top = 87.0
offset_right = 200.0
offset_bottom = 131.0
text = "Welcome! 

WASD to move
SPC to Jump
ESC for mouse pointer
Left click to shoot. Hold for full auto. 

Number keys 1-5 to select difficulty.
Press Enter to get started.


Music: \"September Sky\" by Per Kiilstofte"
label_settings = SubResource("LabelSettings_7jktm")

[node name="SeptemberSky" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_ryrav")
volume_db = -2.506

[node name="GameOver" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_eow3j")
volume_db = -2.506

[connection signal="is_player_ready" from="." to="MobSpawner3D" method="_on_game_is_player_ready"]
[connection signal="is_player_ready" from="." to="MobSpawner3D2" method="_on_game_is_player_ready"]
[connection signal="player_died" from="." to="Player" method="_on_game_player_died"]
[connection signal="player_died" from="." to="MobSpawner3D" method="_on_game_player_died"]
[connection signal="player_died" from="." to="MobSpawner3D2" method="_on_game_player_died"]
[connection signal="body_entered" from="KillPlane" to="." method="_on_kill_plane_body_entered"]
[connection signal="mob_spawned" from="MobSpawner3D" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D2" to="." method="_on_mob_spawner_3d_mob_spawned"]
